theme: fix some sizing issues in content on small font sizes #466

--- a/static/css/ie.css
+++ b/static/css/ie.css
@@ -50,7 +50,7 @@
 		padding-right: 2rem;
 	}
 	blockquote {
-		border-left: 10px solid rgba( 134, 134, 134, .4 );
+		border-left: .6rem solid rgba( 134, 134, 134, .4 );
 	}
 	blockquote cite {
 		text-align: right;
@@ -125,7 +125,6 @@
 		border-top-right-radius: 2px;
 		border-bottom-right-radius: 2px;
 		border-bottom-left-radius: 0;
-		padding-left: 22px;
 	}
 	span > .copy-to-clipboard-button {
 		border-top-left-radius: 0;
@@ -133,12 +132,7 @@
 		border-bottom-right-radius: 2px;
 		border-bottom-left-radius: 0;
 	}
-	.copy-to-clipboard-button > i {
-		margin-left: -22px;
-	}
 	pre > .copy-to-clipboard-button {
-		padding-left: 25px;
-		padding-right: 3px;
 		right: 4px;
 	}
 	.disableInlineCopyToClipboard span > code.copy-to-clipboard-code {
