--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -476,7 +476,7 @@ h2, h3, h4, h5, h6 {
 }
 
 blockquote {
-    border-inline-start: 10px solid rgba( 134, 134, 134, .4 );
+    border-inline-start: .6rem solid rgba( 134, 134, 134, .4 );
 }
 
 blockquote p {
@@ -490,7 +490,7 @@ blockquote cite {
     display: block;
     font-weight: bold;
     opacity: .5;
-    padding-top: .5em;
+    padding-top: .5rem;
     text-align: end;
 }
 
@@ -1010,7 +1010,6 @@ html[dir="rtl"] #body #breadcrumbs {
     border-width: 1px;
     cursor: pointer;
     font-size: .934375rem;
-    padding-inline-start: 22px;
 }
 
 span > .copy-to-clipboard-button {
@@ -1023,7 +1022,6 @@ span > .copy-to-clipboard-button {
 .copy-to-clipboard-button > i {
     font-size: .859625rem;
     font-weight: 500;
-    margin-inline-start: -22px;
 }
 
 .copy-to-clipboard-code + .copy-to-clipboard-button > i {
@@ -1037,10 +1035,7 @@ pre > .copy-to-clipboard-button {
     border-style: solid;
     border-width: 1px;
     inset-inline-end: 4px;
-    padding-bottom: 5px;
-    padding-inline-start: 25px;
-    padding-inline-end: 3px;
-    padding-top: 5px;
+    padding: 5px 3px;
     position: absolute;
     top: 4px;
 }
@@ -1415,7 +1410,7 @@ rapi-doc::part(btn) {
 rapi-doc::part(section-endpoint-head-method) {
     /* makes method marker large enough to not overflow on text DELETE */
     font-size: .6875rem;
-    width: 5.5em;
+    width: 5.5rem;
 }
 
 .select-container i {
